@@ -1,6 +1,6 @@
 Summary: A high-speed clustered L2TP LNS
 Name: l2tpns
-Version: 2.1.18
+Version: 2.1.19
 Release: 1
 License: GPL
 Group: System Environment/Daemons
@@ -43,5 +43,5 @@ rm -rf %{buildroot}
 %attr(644,root,root) /usr/share/man/man[58]/*
 
 %changelog
-* Tue Apr 18 2006 Brendan O'Dea <bod@optus.net> 2.1.18-1
-- 2.1.18 release, see /usr/share/doc/l2tpns-2.1.18/Changes
+* Mon Apr 24 2006 Brendan O'Dea <bod@optus.net> 2.1.19-1
+- 2.1.19 release, see /usr/share/doc/l2tpns-2.1.19/Changes
